<?xml version="1.0"?>
<package>
  <name>dubins_plus</name>
  <version>0.0.0</version>
  <description>The dubins_plus package</description>

  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/dubins_plus</url>
  <author email="namniart@gmail.com">Austin Hendrix</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosunit</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosunit</run_depend>
  <run_depend>tf</run_depend>
</package>
